tests/e2e/semantics/ops_add_regex_int.error
Error: syntax error in story at line 1, column 5

1|    a = /foo/ + 1
          ^^^^^^^^^

E0103: `+` between `regexp` and `int` is not supported.
